# CEREsFit

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: package_testing.yml  python-publish.yml
ceresfit/: __init__.py  ceresfit_linreg.py  unc_calc.py
curefit/: __init__.py  curefit_linreg.py
examples/: linear_regression_data_set.ipynb  mahon_example_data_set_1.ipynb  plot_linear_regression.ipynb
mahon/: __init__.py  mahon_linreg.py
src/ceresfit/: __init__.py  ceresfit_linreg.py
tests/: __init__.py  conftest.py  test_ceresfit_delta.py  test_ceresfit_linreg.py  test_ceresfit_linreg_ci.py  test_ceresfit_linreg_datasets.py  test_curefit_delta.py  test_curefit_linreg.py  test_curefit_linreg_ci.py  test_curefit_linreg_datasets.py  test_kron_delta.py  test_mahon_linreg.py  test_mahon_linreg_ci.py  test_mahon_linreg_datasets.py  test_unc_calc.py
tests/datasets/: ci_calc_data.csv  ci_calc_results.csv  ci_calc_results_fixpt_0-0.csv  set1.csv  set2.csv  set3.csv  set4.csv  set5.csv
