[project]
name = "ceresfit"
version = "0.3.0"
description = "Linear Regression for data set with correlated or uncorrelated uncertainties in both axes."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy"
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov",
    "xdoctest>=1.1.3",
]

[tool.rye.scripts]
test_cov = "pytest --cov --cov-report xml"
test_docs = "xdoctest ceresfit --all"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ceresfit"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=ceresfit --cov-report=xml"
testpaths = "tests"
