[project]
name = "ceresfit"
version = "0.3.2"
description = "Linear Regression for data set with correlated or uncorrelated uncertainties in both axes."
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy"
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.14.13",
    "xdoctest>=1.1.3",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=ceresfit --cov-report=xml"
testpaths = "tests"
